# panga

./: .gitignore  CMakeLists.txt  Doxyfile.in  INSTALL  README
cmake/Modules/: GetGitRevisionDescription.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/fitting/: defaultfitter.cpp  defaultfitter.h  eigen_lm_includes.h  fitconfiguration.cpp  fitconfiguration.h  fitparameter.h  fitparameterconfig.cpp  fitparameterconfig.h  fitresults.cpp  fitresults.h  fitresultsprocessor.h  levenbergmarquardtfitter.cpp  levenbergmarquardtfitter.h  modelparameterconfig.h  montecarlocontroller.cpp  montecarlocontroller.h  noblefitfunction.cpp  noblefitfunction.h  nobleparametermap.cpp  nobleparametermap.h  randomnumberbuffer.h  randomnumbergenerator.h
src/core/misc/: data.h  defines.h  gas.h  parameter_description.h  rundata.cpp  rundata.h  templates.h  typedefs.h
src/core/models/: cemodel.cpp  cemodel.h  cemodelfactory.cpp  cemodelfactory.h  ceqcalculationmethod.h  ceqmethodfactory.h  ceqmethodmanager.cpp  ceqmethodmanager.h  clevermethod.cpp  clevermethod.h  combinedmodel.cpp  combinedmodel.h  combinedmodelfactory.cpp  combinedmodelfactory.h  derivativecollector.cpp  derivativecollector.h  derivativecollectorgenerator.h  diffusioncoefficientinair.cpp  diffusioncoefficientinair.h  excessairmodel.h  generatehelperclasses.h  generatehelpermethods.h  grmodel.cpp  grmodel.h  grmodelfactory.cpp  grmodelfactory.h  jenkinsmethod.cpp  jenkinsmethod.h  jenkinsmethodfactory.cpp  jenkinsmethodfactory.h  modelfactory.h  modelmanager.cpp  modelmanager.h  modelparameter.h  odmodel.cpp  odmodel.h  odmodelfactory.cpp  odmodelfactory.h  parameteraccessor.h  parameteraccessorgenerator.h  (+20 more)
src/core/testing/: CMakeLists.txt
src/core/testing/fitting/: CMakeLists.txt  fitresults_mock.h  test_fitparameterconfig.cpp  test_fitresults.cpp  test_nobleparametermap.cpp  testmain.cpp
src/core/testing/misc/: CMakeLists.txt  test_rundata.cpp  testmain.cpp
src/core/testing/models/: CMakeLists.txt  manualtest_models.cpp  test_cemodel.cpp  test_ceqcalculationmethod.cpp  test_clevermethod.cpp  test_combinedmodel.cpp  test_combinedmodelfactory.cpp  test_diffusioncoefficientinair.cpp  test_jenkinsmethod.cpp  test_parametermanager.cpp  test_physicalproperties.cpp  test_uamodel.cpp  test_weissderivativecollector.cpp  test_weissmethod.cpp  test_weissparameteraccessor.cpp  testceqmethod.h  testmain.cpp  testmodel.h
src/gui/: CMakeLists.txt  chi2explorer.cpp  chi2explorer.h  chi2explorer.ui  chi2parameterconfigmodel.cpp  chi2parameterconfigmodel.h  chi2parameterslider.cpp  chi2parameterslider.h  chi2parameterslider.ui  colormap.cpp  colormap.h  columntypelistmodel.cpp  columntypelistmodel.h  commons.h  concentrationsheaderview.cpp  concentrationsheaderview.h  concentrationsmodel.cpp  concentrationsmodel.h  concentrationsview.cpp  concentrationsview.h  contourplot.cpp  contourplot.h  contourplotdata.cpp  contourplotdata.h  contourplotfitter.cpp  contourplotfitter.h  datavector.cpp  datavector.h  doubleeditorfactory.cpp  doubleeditorfactory.h  ensemblefitconfigurationdialog.cpp  ensemblefitconfigurationdialog.h  ensembleresultsprocessorproxy.cpp  ensembleresultsprocessorproxy.h  fitsetup.cpp  fitsetup.h  fitsetupwidget.cpp  fitsetupwidget.h  fitsetupwidget.ui  fittingthread.cpp  (+70 more)
src/gui/testing/: CMakeLists.txt  test_datavector.cpp  test_eigenclassesserialization.cpp  test_parametersetupmodel.cpp  test_resultsmodel.cpp  testmain.cpp
win32/: panga.rc
